css/styles.css
body
{
	margin: 0;
	padding: 0;
	background-image: url(../src/bg.jpg); /*Image de fond*/
	background-position: center 10%;
	background-repeat: no-repeat ;
	background-attachment: fixed; /*Fige l'image pour qu'elle ne bouge pas au scroll*/
	font-family: 'Oswald', sans-serif;
	background-color: #411D0F;
	padding-top: 100px;
}

a
{
	text-decoration: none;
	color: rgb(255, 0, 0);
}

a:hover
{
	text-decoration: underline;
}

p
{

}

#header
{
	position: fixed;
	top: 0;
	width: 1130px;
}

.l_float
{
	float: left;
}

.r_float
{
	float: right;
}

.clearfix
{
	clear: both;
}


/*--------------------------------------------------------------*/
#container
{
	width: 1130px;
	margin: 0 auto;			/*Marge*/
	position: relative;
	background-color: white;
}

/*--------------------------------------------------------------*/
#header
{
	background-color: #f4c456;
	z-index: 2;
}
/*--------------------------------------------------------------*/
#logo
{
	margin: 10px 10px;
}

#navigation
{
	margin: 0 auto;
}

#navigation ul
{
	margin: 0;
	padding: 0;
}

#navigation ul, #navigation li
{
	list-style-type: none; /*del puce*/
	margin: 0;

	display: block; /*Affichage horizontal*/
	float: left;
}

#navigation li a
{
	display: block;
	padding: 40px 25px 44px;
	margin: 0 26px;
	font-size: 19px;
}

#navigation ul li:hover
{
	/*color: #f4c456;*/
}

#navigation li:hover a
{
	color: #f4c456;
	text-decoration: none;
	background-color: #aa1715;
}
/*--------------------------------------------------------------*/


#slider
{
	z-index: 0;
}

.bxslider
{
	z-index: 0;
	margin: 0;
}

.bx-wrapper .bx-viewport
{
	left: 0;
	border: 0;
	z-index: 0;
}
.bx-wrapper .bx-controls-direction a
{
	z-index: 0;
}

/*--------------------------------------------------------------*/
#body
{
	margin-top: 50px;

}

#article1, #article2
{
	width: 400px;
	border-radius: 20px;
	border: solid #f4c456;
	background-color: rgba(255, 255, 255, 0.80);
	padding: 10px;
	line-height: 22px; /*Interlignage*/
	float: left;
	margin-left: 90px;
}
#article1 h1, #article2 h1
{
	font-size: 2em;
	text-align: center;
	line-height: 35px;
}
#article1 p, #article2 p
{
	font-size: 16px;
}

.lettrine::first-letter
{
	float: left;
	font-size: 40px;
	margin: 5px 10px 0px 0px;
	padding-top: 8px;
}

.date_article
{
	font-size: 5px;
	font-style: italic;
}
.link_article
{
	text-align: right;
}

.lire_la_suite
{
	color: #000;
	font-weight: bold;
	text-align: right;
	text-decoration: underline;
	background-image: url(../src/article/lire_la_suite.png);
	background-repeat: no-repeat;
	background-position: right;
	padding-right: 32px;
}
.lire_la_suite img
{

}
/*--------------------------------------------------------------*/

#footer
{
	margin-top: 150px;
	color: #ECBC2F;
	background-color: #000000;
	text-align: center;
	position: relative;
}
#footer a
{
	color: #ECBC2F;
}

#footer .v_line
{
	height: 100px;
	border: 1px #ECBC2F solid;
	padding: 0px;
	margin-top: 10px;
}
#footer div
{
	padding: 5px;
}

#footer_informations
{
	width: 375px;
}

#footer_bas li, #footer_bas ul
{
	margin: 0;
	padding: 0;
	list-style-type: none; /*del puce*/
}

#footer_bas
{
	width: 375px;
}
/*--------------------------------------------------------------*/
#reseaux_sociaux
{
	width: 330px;
	/*border: 1px #555 solid; */
	/*padding-top: 100px; */
	margin-top: 20px;
}
#reseaux_sociaux div
{
	width:52px;
	height: 52px;
	margin:0 auto;
	background-repeat: no-repeat;
	background-position: center center;
	display: inline-block;
}
#reseaux_sociaux .facebook:hover
{
	background-image: url(../src/facebook.png);
}
#reseaux_sociaux .facebook
{
	background-image: url(../src/facebook-hover.png);
}
#reseaux_sociaux .twitter:hover
{
	background-image: url(../src/twitter.png);
}
#reseaux_sociaux .twitter
{
	background-image: url(../src/twitter-hover.png);
}
#reseaux_sociaux .google:hover
{
	background-image: url(../src/google.png);
}
#reseaux_sociaux .google
{
	background-image: url(../src/google-hover.png);
}
/*--------------------------------------------------------------*/
#aside
{
	width: 200px;
	border-radius: 20px 0 0 20px;
	border: solid #f4c456;
	background: #f4c456;
	padding: 10px 5px;

	text-align: center;
	position: fixed;
	top: 150px;
	right: -150px;
	transition: 250ms;
	box-shadow: -4px 8px 10px black;
}
#aside h2
{
	margin: 0;
}
#aside p
{
	font-size: 14px;

}

#aside img
{
	display: block;
	width: 100px;
	margin: 0 auto;
}
.date_aside
{
	font-weight: bold;
	line-height: 15px;
}
#aside:hover
{
	right: 0px
}
/*--------------------------------------------------------------*/

